spacing fixes

--- a/styles/css/primary-care.css
+++ b/styles/css/primary-care.css
@@ -247,6 +247,10 @@ img.logo-very-small{
 	font-family: RegCampaignFont,Helvetica,Arial,sans-serif;
 }
 
+.row1-caption h1 span.part-1{
+	display: block;
+	margin-bottom: 20px;
+}
 
 .row-4 ul li { 
   color: #796b68;
@@ -587,7 +591,7 @@ a.top-link {
 
 
 	.row-6, .row-7 {
-		padding: 15px 0;
+		padding: 15px 0 60px;
 		background-color: #fff;
 	}
 
@@ -662,6 +666,14 @@ a.top-link {
 	.row-3 h1, .row-6 h1, .row-7 h1{
 		font-size: 2em;
 	}
+
+	.row1-caption h1 span.part-1{
+		margin-bottom: 10px;
+	}
+
+	.row1-caption h1{
+		padding-bottom: 0;
+	}
 }
 
 @media (max-width: 479px)  {
@@ -723,7 +735,7 @@ a.top-link {
 
 	.row1-caption h1 {
 		font-size: 1.3em;
-		margin: 0px;
+		margin: 0 0 10px 0;
 	}
 
 	.fap-cta a {
